charts/kubeapps/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-kubeapps
  namespace: kubeapps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - kubeapps.cuiqingcai.com
      secretName: tls-kubeapps-cuiqingcai-com
  rules:
    - host: kubeapps.cuiqingcai.com
      http:
        paths:
          - backend:
              serviceName: kubeapps
              servicePort: 80
            path: /
